--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,13 +5,12 @@ body {
 h1 {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: darkred;
+	padding-left: 20px;
+	font-size: 60px;
 }
 
 #title {
 	padding: 20px;
-}
-#title h1 {
-	font-size: 60px;
 }
 
 #links {
